# try

./: configure.ac  mytest.py
data/: Makefile.am
lib/dvb/: decoder.cpp  dvb.cpp  epgcache.cpp
lib/gdi/: fb.cpp  fb.h  gfbdc.cpp  gpixmap.cpp
lib/python/Components/: AVSwitch.py  About.py  Lcd.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Screens/: UserInterfacePositioner.py
lib/python/Tools/: StbHardware.py
tools/: enigma2.sh.in
